# howijd.network

./: README.md
.github/ISSUE_TEMPLATE/: era.yml
.github/workflows/: github-issues.yml  github-tasks.yml  semantic-pull-request.yml
assets/howijd/: README.md  howijd-svg.afdesign
assets/images/howi/: README.md
lib/cryptdatum/: .gitattributes  .gitignore  Cargo.toml  Makefile  README.md  cryptdatum.c  cryptdatum.go  cryptdatum.h  cryptdatum.rs  cryptdatum_test.c  cryptdatum_test.go  go.mod
lib/cryptdatum/bench/: run-benchmarks.py
lib/cryptdatum/bench/benchmark/: __init__.py  benchmark.py  logger.py
lib/cryptdatum/bench/cmd/: cryptdatum-bench-rust  cryptdatum-bench.c  cryptdatum-bench.go  cryptdatum-bench.rs
lib/cryptdatum/cmd/: cryptdatum.c  cryptdatum.go  cryptdatum.rs
lib/cryptdatum/testdata/v1/: has-aligned-header.cdt  main.go  valid-header.cdt
